; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23888-ir.c_cx23888_ir_dbg_match.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23888-ir.c_cx23888_ir_dbg_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_dbg_match = type { i64, i32 }

@V4L2_CHIP_MATCH_HOST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_dbg_match*)* @cx23888_ir_dbg_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx23888_ir_dbg_match(%struct.v4l2_dbg_match* %0) #0 {
  %2 = alloca %struct.v4l2_dbg_match*, align 8
  store %struct.v4l2_dbg_match* %0, %struct.v4l2_dbg_match** %2, align 8
  %3 = load %struct.v4l2_dbg_match*, %struct.v4l2_dbg_match** %2, align 8
  %4 = getelementptr inbounds %struct.v4l2_dbg_match, %struct.v4l2_dbg_match* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @V4L2_CHIP_MATCH_HOST, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.v4l2_dbg_match*, %struct.v4l2_dbg_match** %2, align 8
  %10 = getelementptr inbounds %struct.v4l2_dbg_match, %struct.v4l2_dbg_match* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = icmp eq i32 %11, 2
  br label %13

13:                                               ; preds = %8, %1
  %14 = phi i1 [ false, %1 ], [ %12, %8 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
